--- a/ctf.html
+++ b/ctf.html
@@ -280,6 +280,30 @@
                 </div>
             </div>
 
+            <!-- Battelle CTF Card 2 -->
+            <div class="ctf-card">
+                <div class="ctf-image">
+                    <img src="img/battelle.jpg" alt="Battelle Logo">
+                </div>
+                <div class="ctf-content">
+                    <h2 class="ctf-title">The Legend of the Headless Horseman</h2>
+                    <p class="ctf-org">Battelle CTF Challenge</p>
+                    <p class="ctf-description">
+                        A multi-architecture reverse engineering challenge involving binary reconstruction, buffer overflows, and cross-platform debugging with QEMU.
+                    </p>
+                    <div class="ctf-tags">
+                        <span class="tag">Reverse Engineering</span>
+                        <span class="tag">Multi-Architecture</span>
+                        <span class="tag">Buffer Overflow</span>
+                        <span class="tag">QEMU</span>
+                    </div>
+                    <a href="Writeups/The Legend of the Headless Horseman - Writeup.pdf" class="ctf-link" target="_blank">
+                        <span>Read Writeup</span>
+                        <span class="arrow">→</span>
+                    </a>
+                </div>
+            </div>
+
             <!-- Add more CTF cards here as you complete more challenges -->
         </div>
     </div>
